// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SRGB > Render > renders correctly 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="space-y-3"
      data-uid="SRGB"
    >
      <div
        class="flex items-center relative"
      >
        <input
          aria-hidden="true"
          class="sr-only absolute top-0 left-10"
          tabindex="-1"
          type="color"
          value="#FF0044"
        />
        <div
          class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_12px)] is-filled"
          data-filled="true"
          data-filled-within="true"
          data-has-value="true"
          data-slot="base"
        >
          <div
            class="h-full flex flex-col"
            data-slot="main-wrapper"
          >
            <div
              class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground h-12 min-h-12 rounded-large !duration-150 transition-colors motion-reduce:transition-none rounded-e-none is-filled"
              data-slot="input-wrapper"
              style="cursor: text;"
            >
              <div
                class="inline-flex w-full items-center h-full box-border"
                data-slot="inner-wrapper"
              >
                <button
                  aria-label="Color picker"
                  class="rounded-full shrink-0 size-6 cursor-pointer"
                  style="background-color: rgb(255, 0, 68);"
                  type="button"
                />
                <input
                  aria-label="Hex color"
                  class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-medium is-filled"
                  data-filled="true"
                  data-filled-within="true"
                  data-has-start-content="true"
                  data-slot="input"
                  data-type="text"
                  id="react-aria-_r_0_"
                  tabindex="0"
                  title=""
                  type="text"
                  value="#FF0044"
                />
              </div>
            </div>
          </div>
        </div>
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 border-medium text-medium gap-3 rounded-large px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent border-default text-foreground min-w-12 w-12 h-12 data-[hover=true]:opacity-hover rounded-s-none border-l-0"
          data-react-aria-pressable="true"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-xl"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224,48V96a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h28.69L182.06,73.37a79.56,79.56,0,0,0-56.13-23.43h-.45A79.52,79.52,0,0,0,69.59,72.71,8,8,0,0,1,58.41,61.27a96,96,0,0,1,135,.79L208,76.69V48a8,8,0,0,1,16,0ZM186.41,183.29a80,80,0,0,1-112.47-.66L59.31,168H88a8,8,0,0,0,0-16H40a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V179.31l14.63,14.63A95.43,95.43,0,0,0,130,222.06h.53a95.36,95.36,0,0,0,67.07-27.33,8,8,0,0,0-11.18-11.44Z"
            />
          </svg>
        </button>
      </div>
      <div
        style="--slider-gradient: linear-gradient(to right, hsl(0 100% 70%), hsl(60 100% 70%), hsl(120 100% 70%), hsl(180 100% 70%), hsl(240 100% 70%), hsl(300 100% 70%), hsl(360 100% 70%));"
      >
        <div
          aria-label="Hue"
          class="flex flex-col w-full gap-1"
          data-hover="false"
          data-orientation="horizontal"
          data-slot="base"
          id="react-aria-_r_7_"
          role="group"
        >
          <div
            class="relative flex gap-2 items-center"
            data-slot="track-wrapper"
          >
            <div
              class="w-3 mr-2"
              data-slot="startContent"
            >
              H
            </div>
            <div
              class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
              data-fill-end="false"
              data-fill-start="true"
              data-slot="track"
              data-thumb-hidden="false"
              data-vertical="false"
              style="position: relative;"
            >
              <div
                class="h-full absolute bg-transparent"
                data-slot="filler"
                style="left: 0%; width: 95.58210614059462%;"
              />
              <div
                aria-label="Slider thumb 1"
                class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                data-react-aria-pressable="true"
                data-slot="thumb"
                index="0"
                orientation="horizontal"
                style="position: absolute; left: 95.58210614059462%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-_r_7_"
                    aria-orientation="horizontal"
                    aria-valuetext="344"
                    id="react-aria-_r_7_-0"
                    max="359.9"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="344"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="--slider-gradient: linear-gradient(to right, hsl(344 0% 50%), hsl(344 100% 50%));"
      >
        <div
          aria-label="Saturation"
          class="flex flex-col w-full gap-1"
          data-hover="false"
          data-orientation="horizontal"
          data-slot="base"
          id="react-aria-_r_d_"
          role="group"
        >
          <div
            class="relative flex gap-2 items-center"
            data-slot="track-wrapper"
          >
            <div
              class="w-3 mr-2"
              data-slot="startContent"
            >
              <span>
                S
              </span>
            </div>
            <div
              class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
              data-fill-end="true"
              data-fill-start="true"
              data-slot="track"
              data-thumb-hidden="false"
              data-vertical="false"
              style="position: relative;"
            >
              <div
                class="h-full absolute bg-transparent"
                data-slot="filler"
                style="left: 0%; width: 100%;"
              />
              <div
                aria-label="Slider thumb 1"
                class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                data-react-aria-pressable="true"
                data-slot="thumb"
                index="0"
                orientation="horizontal"
                style="position: absolute; left: 100%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-_r_d_"
                    aria-orientation="horizontal"
                    aria-valuetext="100"
                    id="react-aria-_r_d_-0"
                    max="100"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="100"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="--slider-gradient: linear-gradient(to right, hsl(344 100% 0%), hsl(344 100% 50%), hsl(344 100% 100%));"
      >
        <div
          aria-label="Lightness"
          class="flex flex-col w-full gap-1"
          data-hover="false"
          data-orientation="horizontal"
          data-slot="base"
          id="react-aria-_r_l_"
          role="group"
        >
          <div
            class="relative flex gap-2 items-center"
            data-slot="track-wrapper"
          >
            <div
              class="w-3 mr-2"
              data-slot="startContent"
            >
              L
            </div>
            <div
              class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
              data-fill-end="false"
              data-fill-start="true"
              data-slot="track"
              data-thumb-hidden="false"
              data-vertical="false"
              style="position: relative;"
            >
              <div
                class="h-full absolute bg-transparent"
                data-slot="filler"
                style="left: 0%; width: 50%;"
              />
              <div
                aria-label="Slider thumb 1"
                class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                data-react-aria-pressable="true"
                data-slot="thumb"
                index="0"
                orientation="horizontal"
                style="position: absolute; left: 50%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-_r_l_"
                    aria-orientation="horizontal"
                    aria-valuetext="50"
                    id="react-aria-_r_l_-0"
                    max="100"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="50"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SRGB > Render > renders with disabled saturation 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="space-y-3"
      data-uid="SRGB"
    >
      <div
        class="flex items-center relative"
      >
        <input
          aria-hidden="true"
          class="sr-only absolute top-0 left-10"
          tabindex="-1"
          type="color"
          value="#FF0044"
        />
        <div
          class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_12px)] is-filled"
          data-filled="true"
          data-filled-within="true"
          data-has-value="true"
          data-slot="base"
        >
          <div
            class="h-full flex flex-col"
            data-slot="main-wrapper"
          >
            <div
              class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground h-12 min-h-12 rounded-large !duration-150 transition-colors motion-reduce:transition-none rounded-e-none is-filled"
              data-slot="input-wrapper"
              style="cursor: text;"
            >
              <div
                class="inline-flex w-full items-center h-full box-border"
                data-slot="inner-wrapper"
              >
                <button
                  aria-label="Color picker"
                  class="rounded-full shrink-0 size-6 cursor-pointer"
                  style="background-color: rgb(255, 0, 68);"
                  type="button"
                />
                <input
                  aria-label="Hex color"
                  class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-medium is-filled"
                  data-filled="true"
                  data-filled-within="true"
                  data-has-start-content="true"
                  data-slot="input"
                  data-type="text"
                  id="react-aria-_r_r_"
                  tabindex="0"
                  title=""
                  type="text"
                  value="#FF0044"
                />
              </div>
            </div>
          </div>
        </div>
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 border-medium text-medium gap-3 rounded-large px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent border-default text-foreground min-w-12 w-12 h-12 data-[hover=true]:opacity-hover rounded-s-none border-l-0"
          data-react-aria-pressable="true"
          tabindex="0"
          type="button"
        >
          <svg
            class="text-xl"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224,48V96a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h28.69L182.06,73.37a79.56,79.56,0,0,0-56.13-23.43h-.45A79.52,79.52,0,0,0,69.59,72.71,8,8,0,0,1,58.41,61.27a96,96,0,0,1,135,.79L208,76.69V48a8,8,0,0,1,16,0ZM186.41,183.29a80,80,0,0,1-112.47-.66L59.31,168H88a8,8,0,0,0,0-16H40a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V179.31l14.63,14.63A95.43,95.43,0,0,0,130,222.06h.53a95.36,95.36,0,0,0,67.07-27.33,8,8,0,0,0-11.18-11.44Z"
            />
          </svg>
        </button>
      </div>
      <div
        style="--slider-gradient: linear-gradient(to right, hsl(0 100% 70%), hsl(60 100% 70%), hsl(120 100% 70%), hsl(180 100% 70%), hsl(240 100% 70%), hsl(300 100% 70%), hsl(360 100% 70%));"
      >
        <div
          aria-label="Hue"
          class="flex flex-col w-full gap-1"
          data-hover="false"
          data-orientation="horizontal"
          data-slot="base"
          id="react-aria-_r_12_"
          role="group"
        >
          <div
            class="relative flex gap-2 items-center"
            data-slot="track-wrapper"
          >
            <div
              class="w-3 mr-2"
              data-slot="startContent"
            >
              H
            </div>
            <div
              class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
              data-fill-end="false"
              data-fill-start="true"
              data-slot="track"
              data-thumb-hidden="false"
              data-vertical="false"
              style="position: relative;"
            >
              <div
                class="h-full absolute bg-transparent"
                data-slot="filler"
                style="left: 0%; width: 95.58210614059462%;"
              />
              <div
                aria-label="Slider thumb 1"
                class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                data-react-aria-pressable="true"
                data-slot="thumb"
                index="0"
                orientation="horizontal"
                style="position: absolute; left: 95.58210614059462%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-_r_12_"
                    aria-orientation="horizontal"
                    aria-valuetext="344"
                    id="react-aria-_r_12_-0"
                    max="359.9"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="344"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="--slider-gradient: linear-gradient(to right, hsl(344 0% 50%), hsl(344 100% 50%));"
      >
        <div
          aria-label="Saturation"
          class="flex flex-col w-full gap-1 opacity-disabled"
          data-hover="false"
          data-orientation="horizontal"
          data-slot="base"
          id="react-aria-_r_18_"
          role="group"
        >
          <div
            class="relative flex gap-2 items-center"
            data-slot="track-wrapper"
          >
            <div
              class="w-3 mr-2"
              data-slot="startContent"
            >
              <span>
                S
              </span>
            </div>
            <div
              class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
              data-fill-end="true"
              data-fill-start="true"
              data-slot="track"
              data-thumb-hidden="false"
              data-vertical="false"
              style="position: relative;"
            >
              <div
                class="h-full absolute bg-transparent"
                data-slot="filler"
                style="left: 0%; width: 100%;"
              />
              <div
                aria-label="Slider thumb 1"
                class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-default ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                data-react-aria-pressable="true"
                data-slot="thumb"
                index="0"
                orientation="horizontal"
                style="position: absolute; left: 100%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-_r_18_"
                    aria-orientation="horizontal"
                    aria-valuetext="100"
                    disabled=""
                    id="react-aria-_r_18_-0"
                    max="100"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="100"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="--slider-gradient: linear-gradient(to right, hsl(344 100% 0%), hsl(344 100% 50%), hsl(344 100% 100%));"
      >
        <div
          aria-label="Lightness"
          class="flex flex-col w-full gap-1"
          data-hover="false"
          data-orientation="horizontal"
          data-slot="base"
          id="react-aria-_r_1g_"
          role="group"
        >
          <div
            class="relative flex gap-2 items-center"
            data-slot="track-wrapper"
          >
            <div
              class="w-3 mr-2"
              data-slot="startContent"
            >
              L
            </div>
            <div
              class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-0 bg-[image:var(--slider-gradient)]"
              data-fill-end="false"
              data-fill-start="true"
              data-slot="track"
              data-thumb-hidden="false"
              data-vertical="false"
              style="position: relative;"
            >
              <div
                class="h-full absolute bg-transparent"
                data-slot="filler"
                style="left: 0%; width: 50%;"
              />
              <div
                aria-label="Slider thumb 1"
                class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-6 h-6 after:w-5 after:h-5 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                data-react-aria-pressable="true"
                data-slot="thumb"
                index="0"
                orientation="horizontal"
                style="position: absolute; left: 50%; transform: translate(-50%, -50%);"
              >
                <div
                  style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                >
                  <input
                    aria-describedby=""
                    aria-details=""
                    aria-labelledby="react-aria-_r_1g_"
                    aria-orientation="horizontal"
                    aria-valuetext="50"
                    id="react-aria-_r_1g_-0"
                    max="100"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="50"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
